# feishubot

./: .env.example  .gitignore  README.md  pyproject.toml  tools.default.toml
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sync-labels.yml
docs/: README.md  design-patterns.md  project-structure.md
scripts/: ci_arch_guard.py
src/feishubot/: app.py  cli.py  config.py  feishu.py  feishu_events.py  llm_client.py  session.py
src/feishubot/ai/configs/: model_routes.example.toml  tools.example.toml
src/feishubot/ai/core/: schemas.py
src/feishubot/ai/memory/: __init__.py  session.py  store.py
src/feishubot/ai/orchestrator/: __init__.py  agent_loop.py  feishu_events.py
src/feishubot/ai/prompts/: __init__.py
src/feishubot/ai/prompts/system/: SOUL.md  general.md
src/feishubot/ai/providers/: __init__.py  base.py  echo.py
src/feishubot/ai/providers/openai_compatible/: client.py
src/feishubot/ai/tools/: __init__.py  base.py  registry.py  runtime.py
src/feishubot/ai/tools/builtins/: __init__.py  calculator.py  soul.py  terminal.py  web_search.py
src/feishubot/ai/utils/: path_utils.py
src/feishubot/channel/: __init__.py  base.py  factory.py  feishu.py
